--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">COM4510</string>
     <string name="selected_image">Selected Image</string>
-    <string name="coordinate_format_string">Latitude: %f, Longitude: %f</string>
+    <string name="coordinate_format_string">Coordinates: Latitude: %f, Longitude: %f</string>
     <string name="no_gps">GPS must be enabled to use this feature</string>
     <string name="no_fine_location">Permission to access fine location must be granted to use this feature</string>
     <string name="cannot_save_photo">Error while saving photo</string>
