Reverted loading screen and fixed out of memory issues by batching image loading into rooms.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="no_gps">GPS must be enabled to use this feature</string>
     <string name="no_fine_location">Permission to access fine location must be granted to use this feature</string>
     <string name="cannot_save_photo">Error while saving photo</string>
+    <string name="external">external</string>
+    <string name="internal">internal</string>
+    <string name="load_progress">%d/%d %s images loaded</string>
 </resources>
