Users can now edit dates.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="load_progress">%d/%d %s images loaded</string>
     <string name="edit_location">Long press to set a new location</string>
     <string name="scanning_message">Scanning your device for more images</string>
+    <string name="basic_info">Basic information:</string>
+    <string name="photo_info">Photographic information:</string>
 </resources>
