Made some changes to SingleShotLocationProvider, including increasing the timeout delay and fixing a bug that caused erroneous multiple calls to onLocationAvailable.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,9 @@
     <string name="app_name">COM4510</string>
     <string name="selected_image">Selected Image</string>
     <string name="coordinate_format_string">Latitude: %f, Longitude: %f</string>
-    <string name="no_last_known">Please try again later</string>
-    <string name="no_gps">GPS must be enabled to use this feature</string>
-    <string name="no_fine_location">Permission to access fine location must be granted to use this feature</string>
+    <string name="no_last_known">Couldn\'t acquire your location right now. Please try again later.</string>
+    <string name="no_gps">Please enable your GPS to use this feature.</string>
+    <string name="no_fine_location">Please grant this app permission to access fine location to use this feature.</string>
     <string name="cannot_save_photo">Error while saving photo</string>
     <string name="external">external</string>
     <string name="internal">internal</string>
