--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">COM4510</string>
     <string name="selected_image">Selected Image</string>
     <string name="coordinate_format_string">Latitude: %f, Longitude: %f</string>
-    <string name="no_last_known">Couldn\'t acquire your location right now. Please try again later.</string>
+    <string name="no_last_known">Couldn\'t acquire your location right now. Please try again later, or try switching to high accuracy mode.</string>
     <string name="no_gps">Please enable your GPS to use this feature.</string>
     <string name="acquiring_location">Attempting to acquire your location.</string>
     <string name="cannot_save_photo">Error while saving photo</string>
@@ -14,4 +14,5 @@
     <string name="basic_info">Basic information:</string>
     <string name="photo_info">Photographic information:</string>
     <string name="grant_permissions">Please grant all the requested permissions to enable the app to work correctly.</string>
+    <string name="no_camera">Your device appears to have no camera, so this feature is unavailable.</string>
 </resources>
