Users can now set a range of dates to search within.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,5 +23,7 @@
     <string name="title">Title</string>
     <string name="description">Description</string>
     <string name="date">Date</string>
+    <string name="start_date">Start date (inclusive)</string>
+    <string name="end_date">End date (exclusive)</string>
     <string name="location_not_set">Location not set</string>
 </resources>
